# tcl-lsp

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  INSTALL.md  Makefile  README.md  pyproject.toml
.claude/: launch.json
.github/: pull_request_template.md
core/: __init__.py  tcl_discovery.py
debugger/: __init__.py  __main__.py  cli.py  controller.py  types.py
docs/: GLOSSARY.md  compiler-architecture.md  example-script-walkthroughs.md  quality.md
explorer/: __init__.py  __main__.py  cli.py  formatters.py  pipeline.py  serialise.py  tcl_cli.py  wasm_cli.py  web.py
lsp/: __main__.py  async_diagnostics.py  server.py
samples/: cookbook_tcp_collect.irul
scripts/: apply_subcommand_migration.py  audit_irules_extract_alignment.py  benchmark_set_packing.tcl  build_kcs_db.py  build_zipapp.py  capture_reference_bytecode.sh  capture_reference_bytecode_84.sh  capture_reference_test_results.sh  capture_reference_test_results_84.sh  check_kcs_index_links.py  dump_our_bytecode.py  generate_catalogs.py  migrate_subcommands.py  reference_disasm.tcl  reference_disasm_84.tcl  reference_test_runner.tcl  reference_test_runner_84.tcl  release.sh  screenshots.sh  tcl_test_client.py  verify_profile_stack.py  zipapp_ai_main.py  zipapp_gui_main.py  zipapp_lsp_main.py  zipapp_mcp_main.py  zipapp_tcl_main.py
tests/: conftest.py  helpers.py  test_analyser.py  test_async_diagnostics.py  test_bigip_irules_refs.py  test_bigip_link_extract.py  test_bigip_object_registry.py  test_bigip_parser.py  test_bigip_rule_extract.py  test_bigip_validator.py  test_bytecode_identity.py  (+149 more)
(+5371 files in other folders)
