[project]
name = "tcl-lsp"
version = "0.2.0"
description = "A Tcl Language Server Protocol implementation"
requires-python = ">=3.10"
dependencies = [
    "pygls>=2.0",
    "lsprotocol>=2024.0.0",
    "pytest-xdist[dev]>=3.8.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.11",
    "ty",
    "wasmtime>=20.0",
    "flask>=3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lsp", "core", "explorer", "vm"]
exclude = ["explorer/static"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = ["editors"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]

[tool.coverage.run]
source = ["lsp", "core", "explorer"]
omit = [
    "lsp/_build_info.py",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "tmp/coverage/python"

[tool.coverage.xml]
output = "tmp/coverage/python/coverage.xml"

[dependency-groups]
dev = [
    "ty",
]
